IJPL-252955 [external-system] cleanup: improve External System execution and auto-sync logs
GitOrigin-RevId: d226f9fd28a5e5eac7ecbf5fa8d4ffd129e9123a